Fix icon alignment by adding display flex to wrapper

--- a/app/components/Button/Button.css
+++ b/app/components/Button/Button.css
@@ -39,7 +39,7 @@
   }
 
   > i,
-  > ion-icon {
+  > div > ion-icon {
     margin-right: 7px;
   }
 
